# FL-for-Aircraft

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_report.md  deployment.txt  explanation.txt  paper_summary.md  progress.md  pyproject.toml  results.md  rq2_report.md  rq3_report.md  rq7_report.md
backend/: README.md  __init__.py  main.py  schemas.py  services.py
frontend/: .gitignore  README.contract.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  summaryTypes.ts  types.ts
notebooks/: 01_eda_cmapss.ipynb  _build_eda.py
results/: summary.json
results/00_eda/: metrics.json
results/01_data/: client_summary_fd001.csv  metrics.json
results/02_smoke/: metrics.json  metrics_fd001.csv
results/03_centralized/: metrics.json  per_epoch_fd001.csv
results/04_local_only/: metrics.json  per_client_best_fd001.csv  per_client_final_fd001.csv
results/05_fedavg/: metrics.json  per_client_loss_fd001.csv  per_round_fd001.csv
results/06_non_iid/: metrics.json  per_client_local_fd001_fd003.csv  per_client_loss_fedavg_fd001_fd003.csv  per_epoch_centralized_fd001_fd003.csv  per_round_fedavg_fd001_fd003.csv
results/rq2_fedccfa/: metrics.json  per_round.csv
results/rq2_fedccfa_diagnostic_t099/: metrics.json  per_round.csv
results/rq2_fedprox/: metrics.json  per_round_mu_0.0.csv  per_round_mu_0.01.csv  (+2 more)
scripts/: build_results_summary.py  check_data_pipeline.py  regen_fedprox_report.py  run_centralized.py  run_fedavg.py  run_fedccfa.py  run_fedprox.py  run_fedrep.py  run_local_only.py  run_non_iid.py  run_rq2.py  run_rq3.py  run_rq7.py  smoke_train.py
tests/: conftest.py  test_aggregators.py  test_backend.py  test_data.py  test_environment.py  test_explain.py  test_fedccfa.py  test_fedprox.py  test_fedrep.py  test_fl.py  test_local_only.py  test_metrics.py  test_models.py  test_multi_subset.py  test_results.py  test_rq7.py  test_train.py
(+101 files in other folders)
